--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "compile": "tsc",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,10 @@
     "node": ">=0.10.5"
   },
   "dependencies": {
-    "typescript": "4.1.2"
+    "webpack": "5.10.0",
+    "webpack-cli": "4.2.0",
+    "typescript": "4.1.2",
+    "ts-loader": "8.0.11"
   },
   "main": "index.tsx",
   "private": true
